# e-hallpass

./: README.md  pyproject.toml
e-hallpass/: app.py
e-hallpass/settings/: __init__.py  sample.secret.py
e-hallpass/templates/: base.html  form.html  index.html  login.html  navbar.html
